# 6006CEM_ML_Portfolio

./: .gitignore  README.md  pyproject.toml
.zed/: settings.json
data/cleaned/regression/: X_test.csv  X_test_engineered.csv  X_train.csv  X_val.csv  X_val_engineered.csv  scaler.pk1  scaler_metadata.json  y_test.csv  y_test_log.csv  y_train.csv  y_train_log.csv  y_val.csv  y_val_log.csv
notebooks/classification/: 01_exploratory_data_analysis.ipynb  02_data_preprocessing.ipynb  03_feature_engineering.ipynb  04_traditional_ml.ipynb  05_deep_learning_ml.ipynb  06_model_tuning.ipynb  07_model_evaluation.ipynb  08_model_explainability.ipynb
notebooks/regression/: 01_explanatory_data_analysis.ipynb  01_explanatory_data_analysis.py  02_data_preprocessing.ipynb  02_data_preprocessing.py  03_feature_engineering.ipynb  03_feature_engineering.py  04_traditional_ml.ipynb  05_deep_learning_ml.ipynb  05_deep_learning_ml.py  06_model_tuning.ipynb  07_model_evaluation.ipynb  08_model_explainability.ipynb
