[project]
name = "ML_Portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "jupytext>=1.17.3",
    "scipy-stubs>=1.16.2.3",
]
